# NT_B5_G07_NS

./: .gitignore  README.md
CameraSystem/: CMakeLists.txt
CameraSystem/include/: CameraSystem.hpp
CameraSystem/include/implementations/: ImageProcessorChain.hpp  LocalFileStorage.hpp  OpenCVDisplay.hpp  WebCamera.hpp
CameraSystem/include/interfaces/: ICameraDevice.hpp  IDisplayManager.hpp  IImageProcessor.hpp  IImageStorage.hpp
CameraSystem/src/: main.cpp
